--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     </title>
   </head>
   <body>
-    <center>
+    <center id="div">
       <h1>Winter Olympics: 2018</h1>
-      <h2> Norway and Sweden</h2>
-      <svg xmlns="https://www.w3.org/2000/svg" width="600" height="500" id="svg"></svg>
+      <h2>Norway and Sweden and More</h2>
       <br>
-      <button id="nor">Show Norway</button>
-      <button id="swed">Show Sweden</button>
+      <h2 id="countryName"></h2>
+      <svg xmlns="http://www.w3.org/2000/svg" id="svg"></svg>
+      <br>
+      <!--<button id="nor">Show Norway</button>-->
+      <!--<button id="swed">Show Sweden</button>-->
     </center>
-
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    
+    <script src="http://d3js.org/d3.v4.min.js"></script>
+    <script src="http://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="medals.js"></script>
   </body>
 
